# rspc-proxy

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
client/src/: index.ts  type.ts
client/src/utils/: createProxy.ts
client/test/: type.ts
example/api/src/: count.rs  main.rs
example/solid/src/: rspc.tsx
example/web/: astro.config.mjs  package.json
example/web/src/components/: react.tsx  solid.tsx
examples/api/: Cargo.toml
examples/react/: index.html  package.json  tsconfig.json  tsconfig.node.json
examples/react/src/: App.tsx  rspc.tsx
examples/react/src/components/: Counter.data.ts  Counter.tsx
examples/solid/: package.json  tsconfig.json
examples/solid/src/: App.tsx
examples/solid/src/components/: Counter.data.ts  Counter.tsx
react/: package.json
solid/: package.json
solid/test/: type.ts
